--- a/index.html
+++ b/index.html
@@ -1,16 +1,116 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Great Idea - Responsive I</title>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Great Idea - Responsive I</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
+    <link
+      href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/index.css" />
+  </head>
 
-</head>
+  <body>
+    <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+    <div class="container">
+      <div class="column1">
+        <nav>
+          <a href="./services.html" class="first-anchor">Services</a>
+          <a href="#">Product</a>
+          <a href="./vision.html">Vision</a>
+          <a href="#">Features</a>
+          <a href="#">About</a>
+          <a href="#">Contact</a>
+        </nav>
+        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo." />
+      </div>
 
-<body>
-<!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
-</body>
+      <div class="column2">
+        <div>
+          <h1>
+            Innovation<br />
+            On <br />
+            Demand
+          </h1>
+          <button>Get Started</button>
+        </div>
+        <div>
+          <img src="img/header-img.png" alt="Image of a code snippet." />
+        </div>
+      </div>
+
+      <hr />
+      <div class="column3">
+        <div class="item1">
+          <h4>Features</h4>
+          <p class="text-space">
+            Aliquam elementum magna eros, ac posuere elvit tempus et.
+            Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+            ornare nisl. Nullam convallis augue justo, at imperdiet metus
+            scelerisque quis.
+          </p>
+        </div>
+        <div>
+          <h4>About</h4>
+          <p>
+            Aliquam elementum magna eros, ac posuere elvit tempus et.
+            Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+            ornare nisl. Nullam convallis augue justo, at imperdiet metus
+            scelerisque quis.
+          </p>
+        </div>
+      </div>
+
+      <div class="column4">
+        <img
+          class="middle-img"
+          src="img/mid-page-accent.jpg"
+          alt="Image of code snippets across the screen"
+        />
+      </div>
+
+      <div class="column5">
+        <div class="item1">
+          <h4>Services</h4>
+          <p>
+            Aliquam elementum magna eros, ac posuere elvit tempus et.
+            Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+            ornare nisl. Nullam convallis augue justo, at imperdiet metus
+            scelerisque quis.
+          </p>
+        </div>
+        <div class="item1">
+          <h4>Product</h4>
+          <p>
+            Aliquam elementum magna eros, ac posuere elvit tempus et.
+            Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+            ornare nisl. Nullam convallis augue justo, at imperdiet metus
+            scelerisque quis.
+          </p>
+        </div>
+        <div>
+          <h4>Vision</h4>
+          <p>
+            Aliquam elementum magna eros, ac posuere elvit tempus et.
+            Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+            ornare nisl. Nullam convallis augue justo, at imperdiet metus
+            scelerisque quis.
+          </p>
+        </div>
+      </div>
+
+      <hr />
+      <div>
+        <h4>Contact</h4>
+        <p>123 Way 456 Street</p>
+        <p>Somewhere, USA</p>
+        <p class="text-space">1 (888) 888-8888</p>
+        <p class="text-space">sales@greatidea.io</p>
+      </div>
+      <footer>Copyright Great Idea! 2018</footer>
+    </div>
+  </body>
 </html>
