media query tablet-header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
     <div class="container">
-      <div class="column1">
+      <div class="header">
         <nav>
           <a href="./services.html" class="first-anchor">Services</a>
           <a href="#">Product</a>
@@ -25,10 +25,16 @@
           <a href="#">About</a>
           <a href="#">Contact</a>
         </nav>
-        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo." />
+        <div>
+          <img
+            class="logo"
+            src="img/logo.png"
+            alt="Great Idea! Company logo."
+          />
+        </div>
       </div>
 
-      <div class="column2">
+      <div class="top-content">
         <div>
           <h1>
             Innovation<br />
