media query tablet-top-content and resize middle image

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
 
       <hr />
-      <div class="column3">
+      <div class="middle-content">
         <div class="item1">
           <h4>Features</h4>
           <p class="text-space">
@@ -70,9 +70,9 @@
         </div>
       </div>
 
-      <div class="column4">
+      <div>
         <img
-          class="middle-img"
+          class="middle-image"
           src="img/mid-page-accent.jpg"
           alt="Image of code snippets across the screen"
         />
