media query mobile header and all content

--- a/index.html
+++ b/index.html
@@ -25,12 +25,8 @@
           <a href="#">About</a>
           <a href="#">Contact</a>
         </nav>
-        <div>
-          <img
-            class="logo"
-            src="img/logo.png"
-            alt="Great Idea! Company logo."
-          />
+        <div class="logo">
+          <img src="img/logo.png" alt="Great Idea! Company logo." />
         </div>
       </div>
 
@@ -78,7 +74,7 @@
         />
       </div>
 
-      <div class="column5">
+      <div class="bottom-content">
         <div class="item1">
           <h4>Services</h4>
           <p>
@@ -109,7 +105,7 @@
       </div>
 
       <hr />
-      <div>
+      <div class="contact">
         <h4>Contact</h4>
         <p>123 Way 456 Street</p>
         <p>Somewhere, USA</p>
